# efa

./: .gitignore  CHANGELOG.rst  pyproject.toml
efa/: __init__.py  efablock.py  efaday.py  funcs.py  helpers.py  vhelpers.py
efa/helpers/: __init__.py  helpers.py  vectorised.py
tests/: test_efablock.py  test_efaday.py  test_funcs.py  test_helpers.py  test_helpers_vectorised.py  test_vhelpers.py
