[tool.poetry]
name = "efa"
version = "0.1.2"
description = "Classes for convenience dealing with EFA dates and settlement periods."
authors = ["Chris Page <cjpage@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = ">7.2.0"
pandas = ">1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
