[tool.poetry]
name = "efa"
version = "0.2.11"
description = "Classes for convenience dealing with EFA dates and settlement periods."
authors = ["Chris Page <cjpage@me.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">3.8"
pytest = ">7.2.0"
pandas = ">1.5.2"
deprecated = "^1.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
